# BlueLights

./: .flake8  .gitignore  README.md  bluetooth.py  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: run-tests.yml
bluelights/: __init__.py  bluetooth.py  domain.py  lights.py  windows_mock.py
tests/: test_bluetooth.py  test_domain.py  test_lights.py
