[tool.poetry]
name = "bluelights"
version = "0.1.0"
description = "Automatic lights controlled by Bluetooth proximity detection"
authors = ["Steven Case <stcinc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tinytuya = "^1.2.5"
bluepy = { version = "^1.3.0", markers = "platform_system == 'Linux'" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
freezegun = "^1.1.0"
mypy = "^0.812"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
